# CSKEL

./: .gitignore  .skelignore  GEMINI.md  README.md  USAGE.md  cskel.toml  pyproject.toml
cskel/: __init__.py  analyzer.py  cli.py  config.py  decorator.py  extractor.py
