[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cskel"
version = "0.1.0"
description = "Extract code skeletons with high SNR for LLM analysis - preserve signatures, types, and docstrings while minimizing implementation noise."
authors = [
    { name = "Your Name", email = "you@example.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
keywords = ["llm", "code-analysis", "skeleton", "refactoring", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "libcst",
    "typer[all]",
    "pathspec",
    "tomli"
]

[project.scripts]
cskel = "cskel.cli:app"
